--- a/Unit 3/ionic-capacitor/android/app/src/main/res/values/strings.xml
+++ b/Unit 3/ionic-capacitor/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main">Ionic capacitor</string>
     <string name="package_name">com.example.capacitor</string>
     <string name="custom_url_scheme">com.example.capacitor</string>
+    <string name="server_client_id">667204529710-2b9jd5idoqepfe6ahpq3qo9kvtkmpdcb.apps.googleusercontent.com</string>
 </resources>
