--- a/Unit 3/ionic-capacitor/android/app/src/main/res/values/strings.xml
+++ b/Unit 3/ionic-capacitor/android/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
     <string name="app_name">Ionic capacitor</string>
     <string name="title_activity_main">Ionic capacitor</string>
-    <string name="package_name">com.example.capacitor</string>
-    <string name="custom_url_scheme">com.example.capacitor</string>
+    <string name="package_name">com.arturober.capacitor</string>
+    <string name="custom_url_scheme">com.arturober.capacitor</string>
     <string name="server_client_id">667204529710-2b9jd5idoqepfe6ahpq3qo9kvtkmpdcb.apps.googleusercontent.com</string>
+    <string name="facebook_app_id">452581145459274</string>
+    <string name="fb_login_protocol_scheme">fb452581145459274</string>
 </resources>
+
